Add multiplier to price calculation

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -100,6 +100,7 @@
 					<input type="hidden" name="duration" value="{{duration}}" />
 					<input type="hidden" name="numPeople" value="{{numPeople}}" />
 					<input type="hidden" name="hotelRating" value="{{hotel_rating}}" />
+					<input type="hidden" name="multiplier" value="{{multiplier}}" />
 					<label class="block py-3">
 						<span class="block text-sm font-medium text-slate-700">Transport</span>
 						<select
