Multiplier real-time change

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -101,7 +101,7 @@
 					<input type="hidden" name="duration" value="{{duration}}" />
 					<input type="hidden" name="numPeople" value="{{numPeople}}" />
 					<input type="hidden" name="hotelRating" value="{{hotel_rating}}" />
-					<input type="hidden" name="multiplier" value="{{multiplier}}" />
+					<input hx-get="/api/tour_offers/multiplier?id={{id}}&numPeople={{numPeople}}" hx-trigger="every 5s" type="hidden" name="multiplier" hx-target="this" hx-swap="outerHTML" handlebars-template="unset" value="{{multiplier}}" />
 					<label class="block py-3">
 						<span class="block text-sm font-medium text-slate-700">Transport</span>
 						<select name="route_id" hx-get="/api/tour_offers/transport_options?id={{id}}&numPeople={{numPeople}}"
