--- a/static/html/search.html
+++ b/static/html/search.html
@@ -32,7 +32,7 @@
            font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring
            focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
 </form>
-<div hx-get="/api/tour_offers/dest_preferences" hx-trigger="load" hx-swap="outerHTML"></div>
+<div hx-get="/api/tour_offers/dest_preferences" hx-trigger="load" hx-swap="outerHTML" hx-indicator="#indicator-ignore"></div>
 Wyniki wyszukiwania:
 <div id="results">
 	<p class="my-10 items-center text-center justify-between mx-auto">Kliknij Szukaj, aby wyświetlić listę</p>
